--- a/app/public/home.html
+++ b/app/public/home.html
@@ -22,7 +22,7 @@
       <h2>Then find the friend with the greatest compatibility!</h2>
       <br>
       <div>
-        <a href="/survey"><button type="button" id="homeButton" class="btn btn-lg btn"><h4><span class="fa fa-list-alt"></span>   Go to Survey</h4></button></a>
+        <a href="/survey"><button type="button" id="homeButton" class="btn btn-primary btn-lg btn"><h4><span class="fa fa-list-alt"></span>   Go to Survey</h4></button></a>
       </div>
     </div>
 
