--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -177,7 +177,7 @@
                     alt="Your Match!">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" id="closeButton" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
 
